--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<section class="about">
 		<div class="container">
 			<h3>ABOUT</h3>
-			<p><strong>Halo nama saya Ferry Ardiansyah sering dipanggil Ferry. Saya seorang pengembang web back-end yang menggunakan teknologi dari JavaScript dan PHP. Untuk saat ini saya merupakan seorang lulusan SMA jurusan IPA, lulus pada tahun 2022. Banyak sekali prestasi dan penghargaan yang telah saya raih selama saya masih bersekolah.</strong></p>
+			<p><strong>Halo nama saya Ferry Ardiansyah sering dipanggil Ferry. Saya seorang pengembang web back-end yang menggunakan teknologi dari JavaScript dan PHP. Untuk saat ini saya merupakan seorang lulusan SMA jurusan Ilmu Pengetahuan Alam(IPA), lulus pada tahun 2022.</strong></p>
 		</div>
 	</section>
 
